[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/menu/main/MainMenuTab.gd" type="Script" id=1]
[ext_resource path="res://assets/themes/theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/graphics/logo.png" type="Texture" id=3]

[node name="MainMenuTab" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 32.0
margin_top = 32.0
margin_right = 992.0
margin_bottom = 544.0
custom_constants/separation = 24
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texture_Logo" type="TextureRect" parent="VBoxContainer"]
margin_right = 960.0
margin_bottom = 180.0
rect_min_size = Vector2( 0, 180 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
visible = false
margin_left = 420.0
margin_right = 540.0
margin_bottom = 16.0
size_flags_horizontal = 4
alignment = 1

[node name="FrontSeparator" type="HSeparator" parent="VBoxContainer/HBoxContainer"]
margin_right = 32.0
margin_bottom = 16.0
rect_min_size = Vector2( 32, 0 )

[node name="TitleLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 36.0
margin_right = 84.0
margin_bottom = 16.0
size_flags_horizontal = 4
text = "M0TH3R"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackSeparator" type="HSeparator" parent="VBoxContainer/HBoxContainer"]
margin_left = 88.0
margin_right = 120.0
margin_bottom = 16.0
rect_min_size = Vector2( 32, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_left = 407.0
margin_top = 204.0
margin_right = 552.0
margin_bottom = 417.0
size_flags_horizontal = 4
size_flags_vertical = 3
custom_constants/separation = 16
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MissionButton" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 145.0
margin_bottom = 75.0
rect_min_size = Vector2( 128, 0 )
size_flags_horizontal = 3
text = "SELECT_MISSION"

[node name="SettingsButton" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_top = 91.0
margin_right = 145.0
margin_bottom = 122.0
rect_min_size = Vector2( 128, 0 )
size_flags_horizontal = 3
text = "SETTINGS"

[node name="QuitButton" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_top = 138.0
margin_right = 145.0
margin_bottom = 169.0
rect_min_size = Vector2( 128, 0 )
size_flags_horizontal = 3
text = "QUIT"

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
margin_top = 441.0
margin_right = 960.0
margin_bottom = 457.0
text = "Loaded..."
align = 1
valign = 1

[node name="StateHBox" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 481.0
margin_right = 960.0
margin_bottom = 512.0
custom_constants/separation = 64
alignment = 1

[node name="NewButton" type="Button" parent="VBoxContainer/StateHBox"]
margin_left = 224.0
margin_right = 352.0
margin_bottom = 31.0
rect_min_size = Vector2( 128, 0 )
text = "NEW"

[node name="SaveButton" type="Button" parent="VBoxContainer/StateHBox"]
margin_left = 416.0
margin_right = 544.0
margin_bottom = 31.0
rect_min_size = Vector2( 128, 0 )
text = "SAVE"

[node name="LoadButton" type="Button" parent="VBoxContainer/StateHBox"]
margin_left = 608.0
margin_right = 736.0
margin_bottom = 31.0
rect_min_size = Vector2( 128, 0 )
text = "LOAD"
[connection signal="mouse_entered" from="VBoxContainer/VBoxContainer/MissionButton" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_entered" from="VBoxContainer/VBoxContainer/SettingsButton" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_entered" from="VBoxContainer/VBoxContainer/QuitButton" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_entered" from="VBoxContainer/StateHBox/NewButton" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_entered" from="VBoxContainer/StateHBox/SaveButton" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_entered" from="VBoxContainer/StateHBox/LoadButton" to="." method="_on_button_mouse_entered"]
